Update space physics ontology navigation group - Remove "PITHIA" from navigation group name - Increase breakpoint width for navbar collapse - Update relevant CSS media queries - Fix text of link to Space Physics Metadata Model page - Update navbar text on different screen widths

--- a/static/style.css
+++ b/static/style.css
@@ -2141,7 +2141,7 @@ ul.tree ul {
     }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1200px) {
     /* Navbar */
     .navbar .dropdown-menu:not(.user-dropdown .dropdown-menu) {
         background: transparent;
@@ -2153,7 +2153,9 @@ ul.tree ul {
     .navbar .dropdown-menu .dropdown-divider:not(.user-dropdown .dropdown-divider) {
         display: none;
     }
+}
 
+@media (max-width: 992px) {
     .resource-detail-aside {
         border-left-width: 0 !important;
     }
